[package]
name = "traveler"
version = "0.1.0"
authors = ["Danny Hadley <dadleyy@gmail.com>"]
edition = "2018"

[[bin]]
name = "toy"
path = "src/toy/main.rs"

[[bin]]
name = "topics"
path = "src/topics/main.rs"

[[bin]]
name = "traveler"
path = "src/traveler/main.rs"

[[bin]]
name = "queen"
path = "src/queen/main.rs"

[dependencies]
